# bureau-of-meteorology-mcp

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  Dockerfile  PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: IDD60920.xml  IDN11050.xml  IDN60920.xml  IDQ60920.xml  IDS60920.xml  IDT60920.xml  IDV60920.xml  IDW60920.xml
scripts/: dev-setup.sh  run-fastmcp.sh
src/mcp_bom_weather/: __init__.py  config.py  fast_mcp_server.py  server.py
src/mcp_bom_weather/adapters/: bom_adapter.py
src/mcp_bom_weather/clients/: bom_client.py
src/mcp_bom_weather/tools/: schemas.py  weather_tools.py
src/mcp_bom_weather/util/: ftp.py
tests/: conftest.py  test_all_cities.py  test_current_weather.py  test_forecast.py  test_warnings.py
