[project]
name = "mcp-bom-weather"
version = "0.1.0"
description = "MCP server tools for Australian Bureau of Meteorology (BoM) weather data"
authors = [{ name = "Contributors" }]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  # Always install the latest available 'ty'
  "ty; python_version >= '3.11'",
  # MCP Python SDK for stdio/TCP server runtime
  "mcp[cli]>=1.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E","F","I","UP","PL","ANN"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
